--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,11 @@ h6,
 
     .navbar .navbar-nav {
         border-top: 1px solid #EEEEEE;
+        width: 100%;
+        
+    }
+    body {
+        overflow-x: hidden;
     }
 }
 
@@ -177,6 +182,7 @@ h6,
         opacity: 0;
         visibility: hidden;
         transition: .5s;
+        overflow: hidden; /* Pour éviter le débordement */
     }
 
     .navbar .nav-item:hover .dropdown-menu {
